# fastapi-photo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
infrastructure/: .terraform.lock.hcl  aad.tf  output.tf  provider.tf  storage.tf  tfenv.sh
load_test/: locustfile.py
notebooks/: experimentation.ipynb
rust/: Cargo.toml
rust/src/: main.rs
src/fastapi_photo/: app.py  utils.py
