[tool.poetry]
name = "fastapi_photo"
version = "0.1.0"
description = ""
authors = ["Jan Vanbuel <janvanbuel@hotmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_photo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.4.2"
azure-identity = "^1.14.0"
azure-storage-blob = "^12.18.2"
aiohttp = "^3.8.5"
pillow = "^10.0.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
locust = "^2.16.1"
black = "^23.9.1"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
